2008-06-25 23:13 -0700  Brendan Cully  <brendan@kublai.com>  (d2134eced31b)

	* init.h: Make $move default to no instead of ask-no. Closes #2945.

	* doc/manual.xml.head: Document difference between index and pager
	search. Closes #2886.

	* commands.c, copy.c, crypt-gpgme.c, handler.c, mbox.c, pgp.c: Make
	mutt_copy_message distinguish between fatal and non-fatal errors.
	Non-fatal errors should prevent moving messages, since they indicate
	data loss. But mutt should still attempt to display them, since
	being able to see some attachments is better than nothing. Also stop
	printing out non-PGP material in application/pgp attachments. Closes
	#2545, #2912.

2008-06-24 23:12 -0700  Brendan Cully  <brendan@kublai.com>  (f5fe657f0633)

	* handler.c: Make multipart decoding a little more
	forgiving. First, ignore bad content-transfer-encoding in
	multipart sections. Second, if an attachment fails to decode,
	print a warning and continue instead of giving up on the entire
	message.

1970-01-01 00:00 +0000  Brendan Cully  <brendan@kublai.com>  (a2e8f6fab8d3)

	* smtp.c: Test that envelope from or from is set before attempting
	SMTP delivery. Closes #3079.

2008-06-14 18:23 -0700  Christoph Berg  <cb@df7cb.de>  (4b790909a037)

	* doc/mbox.man: Document that From_ lines use asctime-style dates,
	not RFC2822 dates. Closes #3077.

2008-06-11 22:45 -0700  Alexey I. Froloff  <raorn@altlinux.org>  (1e8ca708a52f)

	* attach.c: Do not attempt to close invalid descriptors. Closes #3075

2008-06-05 13:06 +0200  Vladimir Marek  <Vladimir.Marek@Sun.COM>  (5ab92dd44ce2)

	* alias.c: Wrap Fqdn in NONULL() to prevent crash with -d5 if Fqdn
	is NULL

2008-06-02 09:45 +0200  Rocco Rutte  <pdmef@gmx.net>  (d6d04a7f5aea)

	* init.c: Allow for printing variable values longer than 256
	characters

	* rfc822.c: Allow for mail addresses longer than 256
	characters (closes #3066).

2008-05-30 16:14 +0200  Rocco Rutte  <pdmef@gmx.net>  (2f59be26ad22)
